--- a/resources/quality/lulzbot_redgum_lutefisk/NinjaFlex_(NinjaTek)_Standard_redgum_lutefisk.inst.cfg
+++ b/resources/quality/lulzbot_redgum_lutefisk/NinjaFlex_(NinjaTek)_Standard_redgum_lutefisk.inst.cfg
@@ -1,11 +1,11 @@
 [general]
 version = 2
 name = Standard
-definition = lulzbot_hibiscus_lutefisk
+definition = lulzbot_redgum_lutefisk
 
 [metadata]
 quality_type = standard
-material = NinjaFlex_(NinjaTek)_1.75_lulzbot_hibiscus_lutefisk
+material = NinjaFlex_(NinjaTek)_1.75_lulzbot_redgum_lutefisk
 type = quality
 setting_version = 4
 
