--- a/resources/quality/lulzbot_taz5_lutefisk/Pro_PLA_(3D_Fuel)_Standard_quality_taz5_lutefisk.inst.cfg
+++ b/resources/quality/lulzbot_taz5_lutefisk/Pro_PLA_(3D_Fuel)_Standard_quality_taz5_lutefisk.inst.cfg
@@ -1,10 +1,10 @@
 [general]
 version = 2
 name = Standard 
-definition = lulzbot_hibiscus_lutefisk
+definition = lulzbot_taz5_lutefisk
 
 [metadata]
-material = Pro_PLA_(3D Fuel)_1.75_lulzbot_hibiscus_lutefisk
+material = Pro_PLA_(3D Fuel)_1.75_lulzbot_taz5_lutefisk
 type = quality
 quality_type = Standard 
 setting_version = 4
