--- a/resources/quality/lulzbot_redgum_lutefisk/Pro_PLA_(3D_Fuel)_Standard_quality_redgum_lutefisk.inst.cfg
+++ b/resources/quality/lulzbot_redgum_lutefisk/Pro_PLA_(3D_Fuel)_Standard_quality_redgum_lutefisk.inst.cfg
@@ -1,10 +1,10 @@
 [general]
 version = 2
 name = Standard 
-definition = lulzbot_hibiscus_lutefisk
+definition = lulzbot_redgum_lutefisk
 
 [metadata]
-material = Polylite_PLA_(Polymaker)_1.75_lulzbot_hibiscus_lutefisk
+material = Pro_PLA_(3D Fuel)_1.75_lulzbot_redgum_lutefisk
 type = quality
 quality_type = Standard 
 setting_version = 4
@@ -16,7 +16,7 @@ cool_fan_speed_min = 100
 cool_min_layer_time = 30
 cool_min_layer_time_fan_speed_max = 30
 cool_min_speed = 10
-default_material_print_temperature = 210
+default_material_print_temperature = 215
 infill_overlap = 10
 infill_sparse_density = 20
 layer_height_0 = 0.425
@@ -24,11 +24,11 @@ material_diameter = 1.75
 layer_height = 0.25
 material_bed_temperature = 60
 material_bed_temperature_layer_0 = 60
-material_final_print_temperature = 190
-material_initial_print_temperature = 195
+material_final_print_temperature = 195
+material_initial_print_temperature = 200
 material_part_removal_temperature = 45
-material_print_temperature = 210
-material_print_temperature_layer_0 = 210
+material_print_temperature = 215
+material_print_temperature_layer_0 = 215
 material_soften_temperature = 140
 retraction_amount = 1.75
 skirt_gap = 3
