--- a/resources/quality/lulzbot_taz6_lutefisk/Polylite_PLA_(Polymaker)_Standard_quality_taz6_lutefist.inst.cfg
+++ b/resources/quality/lulzbot_taz6_lutefisk/Polylite_PLA_(Polymaker)_Standard_quality_taz6_lutefist.inst.cfg
@@ -1,10 +1,10 @@
 [general]
 version = 2
 name = Standard 
-definition = lulzbot_hibiscus_lutefisk
+definition = lulzbot_taz6_lutefisk
 
 [metadata]
-material = Polylite_PLA_(Polymaker)_1.75_lulzbot_hibiscus_lutefisk
+material = Polylite_PLA_(Polymaker)_1.75_lulzbot_taz6_lutefisk
 type = quality
 quality_type = Standard 
 setting_version = 4
