change to variable name

--- a/resources/quality/lulzbot_mini_lutefisk/Polylite_PLA_(Polymaker)_High_quality_mini_lutefist.inst.cfg
+++ b/resources/quality/lulzbot_mini_lutefisk/Polylite_PLA_(Polymaker)_High_quality_mini_lutefist.inst.cfg
@@ -4,7 +4,7 @@ name = High Detail
 definition = lulzbot_mini_lutefisk
 
 [metadata]
-material = Polylite_PLA_(Polymaker)_1.75_lulzbot_mini_lutefisk
+material = PolyLite_PLA_(Polymaker)_1.75_lulzbot_mini_lutefisk
 type = quality
 quality_type = high quality
 setting_version = 4
