--- a/resources/quality/lulzbot_taz5_lutefisk/Polylite_PLA_(Polymaker)_Standard_quality_taz5_lutefist.inst.cfg
+++ b/resources/quality/lulzbot_taz5_lutefisk/Polylite_PLA_(Polymaker)_Standard_quality_taz5_lutefist.inst.cfg
@@ -4,7 +4,7 @@ name = Standard
 definition = lulzbot_taz5_lutefisk
 
 [metadata]
-material = Polylite_PLA_(Polymaker)_1.75_lulzbot_taz5_lutefisk
+material = PolyLite_PLA_(Polymaker)_1.75_lulzbot_taz5_lutefisk
 type = quality
 quality_type = Standard 
 setting_version = 4
