--- a/resources/quality/lulzbot_taz6_lutefisk/Polylite_PLA_(Polymaker)_High_Speed_taz6_lutefist.inst.cfg
+++ b/resources/quality/lulzbot_taz6_lutefisk/Polylite_PLA_(Polymaker)_High_Speed_taz6_lutefist.inst.cfg
@@ -4,7 +4,7 @@ name = High Speed
 definition = lulzbot_taz6_lutefisk
 
 [metadata]
-material = Polylite_PLA_(Polymaker)_1.75_lulzbot_taz6_lutefisk
+material = PolyLite_PLA_(Polymaker)_1.75_lulzbot_taz6_lutefisk
 type = quality
 quality_type = high speed
 setting_version = 4
