--- a/resources/quality/lulzbot_redgum_cecropia/PolyLite_PLA_(Polymaker)_High_speed_redgum_cecropia.inst.cfg
+++ b/resources/quality/lulzbot_redgum_cecropia/PolyLite_PLA_(Polymaker)_High_speed_redgum_cecropia.inst.cfg
@@ -17,15 +17,15 @@ brim_line_count = 10
 carve_multiple_volumes = True
 cool_fan_full_at_height = 0
 cool_fan_full_layer = 5
-cool_min_layer_time = 15
+cool_min_layer_time = 10
 cool_min_layer_time_fan_speed_max = 0
 cool_min_speed = 5
 cool_fan_speed_min = 100
-default_material_print_temperature = 230
+default_material_print_temperature = 215
 expand_skins_expand_distance = 0
 fill_outline_gaps = False
 infill_before_walls = False
-infill_pattern = grid
+infill_pattern = lines
 infill_sparse_density = 20
 layer_0_z_overlap = 0.5
 layer_height = 0.35
@@ -36,37 +36,35 @@ line_width = 0.5
 material_bed_temperature = 45
 material_bed_temperature_layer_0 = 55
 material_final_print_temperature = 210
-material_initial_print_temperature = 215
+material_initial_print_temperature = 210
 material_part_removal_temperature = 35
-material_print_temperature = 230
-material_print_temperature_layer_0 = 215
+material_print_temperature = 215
+material_print_temperature_layer_0 = 210
 material_probe_temperature = 160
 material_soften_temperature = 180
 material_wipe_temperature = 170
 prime_tower_size = 6.282808624375432
 raft_airgap = 0.5
 retract_at_layer_change = True
-retraction_amount = 2
+retraction_amount = 1.5
 retraction_combing = off
-retraction_count_max = 50
-retraction_extrusion_window = 2
+retraction_count_max = 99
+retraction_extrusion_window = 3
 retraction_hop_enabled = False
-retraction_min_travel = 1
-retraction_prime_speed = 15
-retraction_retract_speed = 10
+retraction_min_travel = 3
 retraction_speed = 15
 skin_preshrink = 0
 skirt_brim_minimal_length = 250
 skirt_gap = 5
 skirt_line_count = 2
-speed_infill = 45
+speed_infill = 50
 speed_layer_0 = 15
-speed_print = 45
+speed_print = 50
 speed_slowdown_layers = 3
 speed_support = 45
 speed_support_interface = 45
 speed_topbottom = 40
-speed_travel = 150
+speed_travel = 170
 speed_travel_layer_0 = 70
 speed_wall = 40
 speed_wall_0 = 40
@@ -89,7 +87,7 @@ support_use_towers = False
 support_xy_distance = 0.5
 support_xy_distance_overhang = 0.5
 support_z_distance = 0.35
-switch_extruder_retraction_amount = 10
+switch_extruder_retraction_amount = 20
 switch_extruder_retraction_speeds = 10
 top_bottom_thickness = 1.4
 top_thickness = 1.4
