updates to pro pla, WH Pro

--- a/resources/quality/lulzbot_quiver_lutefisk/Pro_PLA_(3D_Fuel)_High_Speed_quiver_lutefisk.inst.cfg
+++ b/resources/quality/lulzbot_quiver_lutefisk/Pro_PLA_(3D_Fuel)_High_Speed_quiver_lutefisk.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_quiver_lutefisk
 [metadata]
 material = Pro_PLA_(3D Fuel)_1.75_lulzbot_quiver_lutefisk
 type = quality
-quality_type = high quality
+quality_type = high speed
 setting_version = 4
 
 [values]
