--- a/resources/quality/lulzbot_quiver_goldenrod/Pro_PLA_(3D-Fuel)_High_Speed_quiver_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_quiver_goldenrod/Pro_PLA_(3D-Fuel)_High_Speed_quiver_goldenrod.inst.cfg
@@ -1,28 +1,15 @@
 [general]
 version = 2
-name = Standard
-definition = lulzbot_redgum_goldenrod
+name = High Speed
+definition = lulzbot_quiver_goldenrod
 
 [metadata]
-quality_type = standard
+quality_type = high speed
 type = quality
-material = Pro_PLA_(3D-Fuel)_lulzbot_redgum_goldenrod
+material = Pro_PLA_(3D-Fuel)_lulzbot_quiver_goldenrod
 setting_version = 4
 
 [values]
-bridge_settings_enabled = True
-default_material_print_temperature = 240
-material_bed_temperature = 50
-material_final_print_temperature = 240
-material_initial_print_temperature = 240
-material_keep_part_removal_temperature = True
-material_print_temperature = 240
-material_print_temperature_layer_0 = 240
-material_probe_temperature = 200
-material_soften_temperature = 200
-material_wipe_temperature = 180
-retraction_amount = 3
-retraction_speed = 20
 acceleration_roofing = 500
 backlash_fading_distance = 1.0
 bottom_thickness = 1.25
@@ -34,6 +21,7 @@ cool_fan_speed_min = 100
 cool_min_layer_time = 15
 cool_min_layer_time_fan_speed_max = 0
 cool_min_speed = 5
+default_material_print_temperature = 215
 expand_skins_expand_distance = 0
 fill_outline_gaps = False
 infill_before_walls = False
@@ -45,16 +33,26 @@ layer_height_0 = 0.35
 layer_start_x = 141
 layer_start_y = 141
 line_width = 0.5
+material_bed_temperature = 45
 material_bed_temperature_layer_0 = 55
+material_final_print_temperature = 210
+material_initial_print_temperature = 210
 material_part_removal_temperature = 35
+material_print_temperature = 215
+material_print_temperature_layer_0 = 210
+material_probe_temperature = 160
+material_soften_temperature = 180
+material_wipe_temperature = 170
 prime_tower_size = 7.745966692414834
 raft_airgap = 0.5
 retract_at_layer_change = True
+retraction_amount = 1.5
 retraction_combing = off
 retraction_count_max = 99
 retraction_extrusion_window = 3
 retraction_hop_enabled = False
 retraction_min_travel = 3
+retraction_speed = 15
 skin_preshrink = 0
 skirt_brim_minimal_length = 250
 skirt_gap = 5
@@ -96,7 +94,3 @@ top_thickness = 1.25
 travel_compensate_overlapping_walls_enabled = False
 wall_thickness = 1
 zig_zaggify_infill = True
-
-
-
-
