--- a/resources/quality/lulzbot_gladiator_dingy_cutworm/Standard_PLA_(3D-Fuel)_High_speed_gladiator_dingy_cutworm.inst.cfg
+++ b/resources/quality/lulzbot_gladiator_dingy_cutworm/Standard_PLA_(3D-Fuel)_High_speed_gladiator_dingy_cutworm.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_gladiator_dingy_cutworm
 [metadata]
 quality_type = high speed
 type = quality
-material = PolyLite_PLA_(Polymaker)_lulzbot_gladiator_dingy_cutworm
+material = Standard_PLA_(3D-Fuel)_lulzbot_gladiator_dingy_cutworm
 setting_version = 4
 
 [values]
