--- a/resources/quality/lulzbot_gladiator_lutefisk/Pro_PLA_(3D_Fuel)_Standard_quality_gladiator_lutefisk.inst.cfg
+++ b/resources/quality/lulzbot_gladiator_lutefisk/Pro_PLA_(3D_Fuel)_Standard_quality_gladiator_lutefisk.inst.cfg
@@ -4,7 +4,7 @@ name = Standard
 definition = lulzbot_gladiator_lutefisk
 
 [metadata]
-material = Pro_PLA_(3D Fuel)_1.75_lulzbot_gladiator_lutefisk
+material = Pro_PLA_(3D-Fuel)_1.75_lulzbot_gladiator_lutefisk
 type = quality
 quality_type = Standard 
 setting_version = 4
