Removing Z hop from PLA profiles and Gcodes for the ProXT

--- a/resources/quality/lulzbot_gladiator_dingy_cutworm/PLA_(Verbatim)_Standard_gladiator_dingy_cutworm.inst.cfg
+++ b/resources/quality/lulzbot_gladiator_dingy_cutworm/PLA_(Verbatim)_Standard_gladiator_dingy_cutworm.inst.cfg
@@ -47,7 +47,7 @@ retraction_combing = off
 retraction_extra_prime_amount = 0.5
 retraction_extrusion_window = 2
 retraction_hop = 1.5
-retraction_hop_enabled = True
+retraction_hop_enabled = False
 retraction_min_travel = 3
 retraction_speed = 10
 skin_overlap = 10
