--- a/resources/quality/lulzbot_gladiator_dingy_cutworm/PolyLite_PLA_(Polymaker)_High_speed_gladiator_dingy_cutworm.inst.cfg
+++ b/resources/quality/lulzbot_gladiator_dingy_cutworm/PolyLite_PLA_(Polymaker)_High_speed_gladiator_dingy_cutworm.inst.cfg
@@ -48,7 +48,7 @@ retraction_combing = off
 retraction_extra_prime_amount = 0.5
 retraction_extrusion_window = 3
 retraction_hop = 1.5
-retraction_hop_enabled = True
+retraction_hop_enabled = False
 retraction_min_travel = 3
 retraction_speed = 15
 skin_overlap = 10
