Renamed PA6 to polymide PA6

--- a/resources/quality/lulzbot_quiver_evergreen_bagworm/PA6-GF_(Polymaker)_Standard_lulzbot_quiver_evergreen_bagworm.inst.cfg
+++ b/resources/quality/lulzbot_quiver_evergreen_bagworm/PA6-GF_(Polymaker)_Standard_lulzbot_quiver_evergreen_bagworm.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_quiver_evergreen_bagworm
 [metadata]
 quality_type = standard
 type = quality
-material = PA6-GF_(Polymaker)_lulzbot_quiver_evergreen_bagworm
+material = PolyMide_PA6-GF_(Polymaker)_lulzbot_quiver_evergreen_bagworm
 setting_version = 4
 
 [values]
