--- a/resources/quality/lulzbot_redgum_cecropia/PA6-GF_(Polymaker)_Standard_redgum_cecropia.inst.cfg
+++ b/resources/quality/lulzbot_redgum_cecropia/PA6-GF_(Polymaker)_Standard_redgum_cecropia.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_redgum_cecropia
 [metadata]
 quality_type = standard
 type = quality
-material = PA6-GF_(Polymaker)_lulzbot_redgum_cecropia
+material = PolyMide_PA6-GF_(Polymaker)_lulzbot_redgum_cecropia
 setting_version = 4
 
 [values]
