--- a/resources/quality/lulzbot_redgum_goldenrod/PolyMide_PA6-GF_(Polymaker)_High_Speed_redgum_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_redgum_goldenrod/PolyMide_PA6-GF_(Polymaker)_High_Speed_redgum_goldenrod.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_redgum_goldenrod
 [metadata]
 quality_type = high speed
 type = quality
-material = PA6-CF_(Polymaker)_lulzbot_redgum_goldenrod
+material = PolyMide_PolyMide_PA6-GF_(Polymaker)_lulzbot_redgum_goldenrod
 setting_version = 4
 
 [values]
@@ -21,7 +21,7 @@ cool_fan_full_at_height = 0
 cool_fan_full_layer = 10
 cool_fan_speed_max = 40
 cool_fan_speed_min = 30
-cool_min_layer_time = 15
+cool_min_layer_time = 25
 cool_min_layer_time_fan_speed_max = 0
 cool_min_speed = 5
 default_material_print_temperature = 265
@@ -57,24 +57,24 @@ retraction_hop_enabled = False
 retraction_min_travel = 3
 retraction_speed = 10
 skin_preshrink = 0
-skin_overlap = 10
 skirt_brim_minimal_length = 250
 skirt_gap = 5
 skirt_line_count = 2
-speed_infill = 45
+speed_infill = 40
 speed_layer_0 = 15
-speed_print = 45
+speed_print = 40
 speed_slowdown_layers = 3
+speed_support = 45
 speed_support_interface = 45
-speed_topbottom = 40
+speed_topbottom = 30
 speed_travel = 170
 speed_travel_layer_0 = 70
-speed_wall = 40
-speed_wall_0 = 40
-speed_wall_x = 40
+speed_wall = 35
+speed_wall_0 = 35
+speed_wall_x = 35
 support_angle = 60
 support_bottom_stair_step_height = 0.5
-support_bottom_stair_step_width = 5
+support_bottom_stair_step_width = 3
 support_brim_enable = True
 support_brim_width = 5
 support_enable = False
@@ -92,6 +92,7 @@ support_xy_distance = 0.5
 support_xy_distance_overhang = 0.5
 support_z_distance = 0.35
 switch_extruder_retraction_amount = 15
+switch_extruder_retraction_speed = 15
 switch_extruder_retraction_speeds = 15
 top_bottom_thickness = 1.4
 top_layers = 3
