--- a/resources/quality/lulzbot_gladiator_evergreen_bagworm/PA6-GF_(Polymaker)_HQ_lulzbot_gladiator_evergreen_bagworm.inst.cfg
+++ b/resources/quality/lulzbot_gladiator_evergreen_bagworm/PA6-GF_(Polymaker)_HQ_lulzbot_gladiator_evergreen_bagworm.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_gladiator_evergreen_bagworm
 [metadata]
 quality_type = high quality
 type = quality
-material = PA6-GF_(Polymaker)_lulzbot_gladiator_evergreen_bagworm
+material = PolyMide_PA6-GF_(Polymaker)_lulzbot_gladiator_evergreen_bagworm
 setting_version = 4
 
 [values]
