--- a/resources/quality/lulzbot_redgum_goldenrod/PolyMide_PA6-CF_(Polymaker)_Standard_redgum_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_redgum_goldenrod/PolyMide_PA6-CF_(Polymaker)_Standard_redgum_goldenrod.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_redgum_goldenrod
 [metadata]
 quality_type = standard
 type = quality
-material = PA6-CF_(Polymaker)_lulzbot_redgum_goldenrod
+material = PolyMide_PA6-CF_(Polymaker)_lulzbot_redgum_goldenrod
 setting_version = 4
 
 [values]
