--- a/resources/quality/lulzbot_redgum_goldenrod/PolyMide_PA6-GF_(Polymaker)_HQ_redgum_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_redgum_goldenrod/PolyMide_PA6-GF_(Polymaker)_HQ_redgum_goldenrod.inst.cfg
@@ -6,7 +6,7 @@ definition = lulzbot_redgum_goldenrod
 [metadata]
 quality_type = high quality
 type = quality
-material = PA6-CF_(Polymaker)_lulzbot_redgum_goldenrod
+material = PolyMide_PolyMide_PA6-GF_(Polymaker)_lulzbot_redgum_goldenrod
 setting_version = 4
 
 [values]
@@ -21,7 +21,7 @@ cool_fan_full_at_height = 0
 cool_fan_full_layer = 10
 cool_fan_speed_max = 40
 cool_fan_speed_min = 30
-cool_min_layer_time = 15
+cool_min_layer_time = 25
 cool_min_layer_time_fan_speed_max = 0
 cool_min_speed = 5
 default_material_print_temperature = 260
@@ -42,7 +42,7 @@ material_final_print_temperature = 250
 material_initial_print_temperature = 255
 material_part_removal_temperature = 30
 material_print_temperature = 260
-material_print_temperature_layer_0 = 260
+material_print_temperature_layer_0 = 255
 material_probe_temperature = 175
 material_soften_temperature = 205
 material_wipe_temperature = 190
@@ -57,21 +57,21 @@ retraction_hop_enabled = False
 retraction_min_travel = 3
 retraction_speed = 10
 skin_preshrink = 0
-skin_overlap = 10
 skirt_brim_minimal_length = 250
 skirt_gap = 5
 skirt_line_count = 2
-speed_infill = 40
+speed_infill = 35
 speed_layer_0 = 10
-speed_print = 40
+speed_print = 35
 speed_slowdown_layers = 3
+speed_support = 40
 speed_support_interface = 40
-speed_topbottom = 35
+speed_topbottom = 25
 speed_travel = 170
 speed_travel_layer_0 = 70
-speed_wall = 35
-speed_wall_0 = 35
-speed_wall_x = 35
+speed_wall = 30
+speed_wall_0 = 30
+speed_wall_x = 30
 support_angle = 60
 support_bottom_stair_step_height = 0.5
 support_bottom_stair_step_width = 5
@@ -91,6 +91,7 @@ support_use_towers = False
 support_xy_distance = 0.5
 support_xy_distance_overhang = 0.5
 support_z_distance = 0.3
+switch_extruder_prime_speed = 15
 switch_extruder_retraction_amount = 15
 switch_extruder_retraction_speeds = 15
 top_bottom_thickness = 1.05
