adding quality profiles for the SL, HE, HS, and HS+ on the 747

--- a/resources/quality/lulzbot_sidekick_9in_archemon/ABS_(CSL)_High_detail_sidekick_9in_achemon.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_9in_archemon/ABS_(CSL)_High_detail_sidekick_9in_achemon.inst.cfg
@@ -1,12 +1,12 @@
 [general]
 version = 2
 name = High Detail
-definition = lulzbot_sidekick_9in
+definition = lulzbot_sidekick_9in_achemon
 
 [metadata]
 quality_type = high detail
 type = quality
-material = ABS_(Chroma_Strand_Labs)_lulzbot_sidekick_9in
+material = ABS_(Chroma_Strand_Labs)_lulzbot_sidekick_9in_achemon
 setting_version = 4
 
 [values]
