fixing names for the SE toolheads and Pro pla 3D fuel

--- a/resources/quality/lulzbot_hibiscus_lutefisk/Pro_PLA_(3D_Fuel)_High_Speed_hibiscus_lutefisk.inst.cfg
+++ b/resources/quality/lulzbot_hibiscus_lutefisk/Pro_PLA_(3D_Fuel)_High_Speed_hibiscus_lutefisk.inst.cfg
@@ -1,12 +1,12 @@
 [general]
 version = 2
-name = High Detail
+name = High Speed
 definition = lulzbot_hibiscus_lutefisk
 
 [metadata]
-material = Pro_PLA_(3D Fuel)_1.75_lulzbot_hibiscus_lutefisk
+material = Pro_PLA_(3D-Fuel)_1.75_lulzbot_hibiscus_lutefisk
 type = quality
-quality_type = high quality
+quality_type = high speed
 setting_version = 4
 
 [values]
