--- a/resources/quality/lulzbot_sidekick_6in_goldenrod/ABS_(IC3D)_High_quality_sidekick_6in_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_goldenrod/ABS_(IC3D)_High_quality_sidekick_6in_goldenrod.inst.cfg
@@ -1,10 +1,10 @@
 [general]
 version = 2
 name = High Detail
-definition = lulzbot_sidekick_6in
+definition = lulzbot_sidekick_6in_goldenrod
 
 [metadata]
-material = ABS_(IC3D)_lulzbot_sidekick_6in
+material = ABS_(IC3D)_lulzbot_sidekick_6in_goldenrod
 type = quality
 quality_type = high quality
 setting_version = 4
