--- a/resources/quality/lulzbot_sidekick_6in_goldenrod/NinjaFlex_(NinjaTek)_High_speed_sidekick_6in_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_goldenrod/NinjaFlex_(NinjaTek)_High_speed_sidekick_6in_goldenrod.inst.cfg
@@ -1,11 +1,11 @@
 [general]
 version = 2
 name = High Speed
-definition = lulzbot_sidekick_6in
+definition = lulzbot_sidekick_6in_goldenrod
 
 [metadata]
 quality_type = high speed
-material = NinjaFlex_(NinjaTek)_lulzbot_sidekick_6in
+material = NinjaFlex_(NinjaTek)_lulzbot_sidekick_6in_goldenrod
 type = quality
 setting_version = 4
 
