--- a/resources/quality/lulzbot_sidekick_6in_goldenrod/NinjaFlex_(NinjaTek)_Standard_sidekick_6in_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_goldenrod/NinjaFlex_(NinjaTek)_Standard_sidekick_6in_goldenrod.inst.cfg
@@ -1,10 +1,10 @@
 [general]
 version = 2
 name = Standard
-definition = lulzbot_sidekick_6in
+definition = lulzbot_sidekick_6in_goldenrod
 [metadata]
 quality_type = standard
-material = NinjaFlex_(NinjaTek)_lulzbot_sidekick_6in
+material = NinjaFlex_(NinjaTek)_lulzbot_sidekick_6in_goldenrod
 type = quality
 setting_version = 4
 
