--- a/resources/quality/lulzbot_sidekick_6in_goldenrod/ABS_(CSL)_High_detail_sidekick_6in_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_goldenrod/ABS_(CSL)_High_detail_sidekick_6in_goldenrod.inst.cfg
@@ -1,12 +1,12 @@
 [general]
 version = 2
 name = High Detail
-definition = lulzbot_sidekick_6in
+definition = lulzbot_sidekick_6in_goldenrod
 
 [metadata]
 quality_type = high detail
 type = quality
-material = ABS_(Chroma_Strand_Labs)_lulzbot_sidekick_6in
+material = ABS_(Chroma_Strand_Labs)_lulzbot_sidekick_6in_goldenrod
 setting_version = 4
 
 [values]
