--- a/resources/quality/lulzbot_sidekick_6in_goldenrod/PETG_IC3D_High_speed_sidekick_6in_goldenrod.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_goldenrod/PETG_IC3D_High_speed_sidekick_6in_goldenrod.inst.cfg
@@ -1,12 +1,12 @@
 [general]
 version = 2
 name = High Speed
-definition = lulzbot_sidekick_6in
+definition = lulzbot_sidekick_6in_goldenrod
 
 [metadata]
 quality_type = high speed
 type = quality
-material = PETG_IC3D_lulzbot_sidekick_6in
+material = PETG_IC3D_lulzbot_sidekick_6in_goldenrod
 setting_version = 4
 
 [values]
