--- a/resources/quality/lulzbot_sidekick_9in_sk175/PETG(IC3D)_High_quality_sidekick_9in_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_9in_sk175/PETG(IC3D)_High_quality_sidekick_9in_sk175.inst.cfg
@@ -13,7 +13,7 @@ setting_version = 4
 bottom_thickness = 1.24
 cool_fan_full_layer = 2
 cool_fan_speed_max = 100
-cool_fan_speed_min = 60
+cool_fan_speed_min = 40
 cool_min_layer_time = 10
 cool_min_layer_time_fan_speed_max = 60
 cool_min_speed = 10
@@ -24,7 +24,8 @@ infill_line_distance = 6.0
 infill_overlap = 15
 layer_height = 0.18
 layer_height_0 = 0.28
-material_diameter = 2.85
+material_diameter = 1.75
+line_width = 0.5
 material_bed_temperature = 85
 material_bed_temperature_layer_0 = 85
 material_final_print_temperature = 240
