adding def files for printers

--- a/resources/quality/lulzbot_sidekick_6in_achemon/PolyLite_PLA_(Polymaker)_High_detail_sidekick_6in_achemon.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_achemon/PolyLite_PLA_(Polymaker)_High_detail_sidekick_6in_achemon.inst.cfg
@@ -4,7 +4,7 @@ name = High Detail
 definition = lulzbot_sidekick_6in_achemon
 
 [metadata]
-quality_type = high detail
+quality_type = High Detail
 type = quality
 material = PolyLite_PLA_(Polymaker)_lulzbot_sidekick_6in_achemon
 setting_version = 4
