--- a/resources/quality/lulzbot_sidekick_6in_banded_tiger/PolyLite_PLA_(Polymaker)_Standard_sidekick_6in_banded_tiger.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_banded_tiger/PolyLite_PLA_(Polymaker)_Standard_sidekick_6in_banded_tiger.inst.cfg
@@ -4,7 +4,7 @@ name = Standard
 definition = lulzbot_sidekick_6in_banded_tiger
 
 [metadata]
-quality_type = standard
+quality_type = Standard
 type = quality
 material = PolyLite_PLA_(Polymaker)_lulzbot_sidekick_6in_banded_tiger
 setting_version = 4
