--- a/resources/quality/lulzbot_sidekick_6in_sk175/ABS_(CSL)_High_speed_sidekick_6in_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_sk175/ABS_(CSL)_High_speed_sidekick_6in_sk175.inst.cfg
@@ -22,6 +22,7 @@ layer_height = 0.35
 layer_height_0 = 0.425
 line_width = 0.5
 material_bed_temperature = 110
+material_diameter = 1.75
 material_print_temperature = 245
 default_material_print_temperature = 245
 prime_tower_size = 6.282808624375432
