--- a/resources/quality/lulzbot_sidekick_6in_sk175/ABS_(IC3D)_Standard_quality_sidekick_6in_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_sk175/ABS_(IC3D)_Standard_quality_sidekick_6in_sk175.inst.cfg
@@ -33,6 +33,7 @@ material_print_temperature = 245
 default_material_print_temperature = 245
 material_bed_temperature = 110
 material_bed_temperature_layer_0 = 110
+material_diameter = 1.75
 material_final_print_temperature = 245
 material_initial_print_temperature = 245
 material_print_temperature_layer_0 = 245
