--- a/resources/quality/lulzbot_sidekick_6in_sk175/Polylite_PLA_(Polymaker)_High_Speed_sidekick_6in_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_sk175/Polylite_PLA_(Polymaker)_High_Speed_sidekick_6in_sk175.inst.cfg
@@ -24,6 +24,7 @@ layer_height = 0.4
 layer_height_0 = 0.425
 line_width = 0.5
 material_bed_temperature = 60
+material_diameter = 1.75
 material_print_temperature = 205
 prime_tower_size = 6.282808624375432
 raft_airgap = 0.5
