--- a/resources/quality/lulzbot_sidekick_6in_sk175/Polylite_PLA_(Polymaker)_High_quality_sidekick_6in_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_sk175/Polylite_PLA_(Polymaker)_High_quality_sidekick_6in_sk175.inst.cfg
@@ -24,6 +24,7 @@ layer_height = 0.18
 layer_height_0 = 0.425
 line_width = 0.5
 material_bed_temperature = 60
+material_diameter = 1.75
 material_part_removal_temperature = 45
 material_print_temperature = 205
 prime_tower_size = 9.128709291752768
