--- a/resources/quality/lulzbot_sidekick_6in_sk175/Standard_PLA_(3D-Fuel)_Standard_quality_sidekick_6in_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_6in_sk175/Standard_PLA_(3D-Fuel)_Standard_quality_sidekick_6in_sk175.inst.cfg
@@ -22,6 +22,7 @@ layer_height = 0.25
 layer_height_0 = 0.425
 line_width = 0.5
 material_bed_temperature = 60
+material_diameter = 1.75
 material_part_removal_temperature = 45
 material_print_temperature = 200
 prime_tower_size = 7.745966692414834
