--- a/resources/quality/lulzbot_sidekick_9in_sk175/ABS_(IC3D)_Standard_quality_sidekick_9in_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_9in_sk175/ABS_(IC3D)_Standard_quality_sidekick_9in_sk175.inst.cfg
@@ -30,6 +30,7 @@ layer_height_0 = 0.4
 line_width = 0.5
 material_flow = 100
 material_print_temperature = 245
+material_diameter = 1.75
 default_material_print_temperature = 245
 material_bed_temperature = 110
 material_bed_temperature_layer_0 = 110
