--- a/resources/quality/lulzbot_sidekick_289_sk175/PETG_(IC3D)_Standard_quality_sidekick_289_sk175.inst.cfg
+++ b/resources/quality/lulzbot_sidekick_289_sk175/PETG_(IC3D)_Standard_quality_sidekick_289_sk175.inst.cfg
@@ -18,9 +18,8 @@ cool_min_layer_time = 10
 cool_min_layer_time_fan_speed_max = 60
 cool_min_speed = 10
 default_material_print_temperature = 240
-expand_skins_expand_distance = 1
 infill_before_walls = True
-infill_line_distance = 6.0
+infill_sparse_density = 20
 infill_overlap = 15
 layer_height = 0.28
 layer_height_0 = 0.38
